[package]
name = "iocage-provision"
version = "0.1.0-dev"
authors = ["Fletcher Nichol <fnichol@nichol.ca>"]
edition = "2018"
license = "MPL-2.0"
repository = "https://github.com/fnichol/iocage-provision"
documentation = "https://github.com/fnichol/iocage-provision"
homepage = "https://github.com/fnichol/iocage-provision"
keywords = ["iocage", "jail", "freebsd"]
categories = ["command-line-utilities"]
description = """
Creates an iocage based FreeBSD jail
"""

exclude = [
  "/.ci/",
  ".cirrus.yml",
  ".prettierrc.yml",
]

[features]
default = ["application"]

# Required for building the `iocage-provision` CLI. Should be disabled when
# depending on iocage-provision as a library. For example, to use as a library
# in a Cargo.toml: `iocage-provision = { version = "...", default-features =
# false }`
application = ["anyhow", "chrono", "clap", "human-panic", "lazy_static"]

[dependencies]
anyhow = { version = "1.0.38", optional = true }
chrono = { version = "0.4.9", optional = true }
clap = { version = "3.0.0-beta.2", optional = true }
human-panic = { version = "1.0.1", optional = true }
ipnet = "2.0.0"
lazy_static = { version = "1.4.0", optional = true }
log = "0.4.8"
nix = "0.21.0"
shell-words = "1.0.0"
tempfile = "3.1.0"
thiserror = "1.0.23"
users = "0.11.0"

[dev-dependencies]
version-sync = "0.9.1"

[package.metadata.docs.rs]
no-default-features = true
